@@ -221,7 +221,6 @@ module Float :
 
     (** {7 Printing}*)
     val print: 'a InnerIO.output -> t -> unit
-    val printer_t : (t -> 'a, 'a, 'acc) Print.directive
 end
 
 
